@@ -1,3 +1,8 @@
+2010-01-24 04:14-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* WinNSMenu.m: Reduce the scope of the lock to encompass only
+	the lookup in processCommand:.
+
 2010-01-24 04:06-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* WinNSMenu.m: Added locking mechanism to prevent concurrent update
